tests/negative/runtime/move_source_is_directory/input.ci
void main() {
    move(".", "dst.txt");
}
